--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -1,12 +1,3 @@
-/*
- * ------------------------------------------------------------
- * IMPORTANT: The contents of this file are auto-generated.
- *
- * This file may be updated by the Shopify admin language editor
- * or related systems. Please exercise caution as any changes
- * made to this file may be overwritten.
- * ------------------------------------------------------------
- */
 {
   "general": {
     "accessibility": {
@@ -29,6 +20,18 @@
       "view_all": "View all",
       "shop_instagram": "Shop our Instagram"
     }
+  },
+  "wishlist": {
+    "title": "My Wishlist",
+    "add_to_wishlist": "Add to wishlist",
+    "remove_from_wishlist": "Remove from wishlist",
+    "view_wishlist": "View wishlist",
+    "empty_title": "Your wishlist is empty",
+    "empty_text": "Save items you love to your wishlist and find them all in one place.",
+    "continue_shopping": "Continue shopping",
+    "add_all_to_cart": "Add all to cart",
+    "clear_wishlist": "Clear wishlist",
+    "remove": "Remove"
   },
   "search": {
     "title": "Search",
